fixed scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: theme('colors.foreground-200');
+}
+
+::-webkit-scrollbar-thumb {
+    background: theme('colors.foreground-500');
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: theme('colors.foreground-700');
+}
